--- a/BioVitalAge/templates/cartella_paziente/eta_biologica/calcolatore.html
+++ b/BioVitalAge/templates/cartella_paziente/eta_biologica/calcolatore.html
@@ -11839,6 +11839,29 @@
                 </div>
             </div>
 
+            <div class="grid-container">
+                <div class="form-group">
+                    <label for="sbp">Pressione Sistolica (SBP)</label>
+                    <input type="number" id="sbp" name="sbp" step="1">
+                </div>
+                <div class="form-group">
+                    <label for="dbp">Pressione Diastolica (DBP)</label>
+                    <input type="number" id="dbp" name="dbp" step="1">
+                </div>
+                <div class="form-group">
+                    <label for="bmi">BMI</label>
+                    <input type="number" id="bmi" name="bmi" step="0.1">
+                </div>
+                <div class="form-group">
+                    <label for="waist">Circonferenza vita (cm)</label>
+                    <input type="number" id="waist" name="waist" step="0.1">
+                </div>
+                <div class="form-group">
+                    <label for="hba1c">HbA1c (%)</label>
+                    <input type="number" id="hba1c" name="hba1c" step="0.01">
+                </div>
+            </div>
+
             <div class="contenitore-genitore">
 
                     <!-- SALUTE DEL CUORE -->
