--- a/BioVitalAge/templates/cartella_paziente/eta_biologica/Referto.html
+++ b/BioVitalAge/templates/cartella_paziente/eta_biologica/Referto.html
@@ -122,24 +122,7 @@
             <div class="back-tittle">
                     <a id="back" href="{% url 'elenco_referti' persona.id %}"><img src="{% static 'image/Arrow_Back.png' %}" alt="back_ico" title="Back to Results"></a>
                     <h2 class="main-welcome-title">
-                        <span>{{ persona.surname|title }}</span>
-                        <span>{{ persona.name|title }}</span> |
-                        <span>Età: {{ persona.chronological_age }}</span> |
-                        {% if datiEstesi.biological_age %}
-                        <span>
-                             Età Biologica: {{ datiEstesi.biological_age }}
-                        </span>
-                        {% endif %}
-                        {% if persona.phone and persona.email %}
-                          <span class="phone_span">
-                            <img src="{% static 'image/Phone.png' %}" width="20px" height="20px">
-                            Telefono: {{ persona.phone }}
-                          </span>
-                          <span class="email_span">
-                            <img src="{% static 'image/Email_Violet.png' %}" width="20px" height="20px">
-                            Email: {{ persona.email }}
-                          </span>
-                        {% endif %}
+                        Referto Età Biologica
                     </h2>
             </div>
             
